--- a/content/themes/elements/sass/layout/_header.scss
+++ b/content/themes/elements/sass/layout/_header.scss
@@ -1,21 +1,21 @@
 header {
   z-index: $zIndex-header;
-  
+
   width: 100%;
-  
+
   .subheader{
     @include flex;
     @include align-items( flex-end );
     @include justify-content( space-between );
-    
+
     padding: 10px $side-margin;
-    
+
     background-color: $brown;
-    
+
     img{
       width: 300px;
     }
-    
+
     p{
       font-size: 28px;
       color: $white;
@@ -27,6 +27,12 @@ header {
   header{
     .subheader{
       @include flex-direction( column );
+      @include align-items( center );
+
+      p{
+        font-size: 20px;
+        text-align: center;
+      }
     }
   }
 }
